syntax = "proto3";
package Game;

// 登录
message S2C_Login{
    required string uuid = 1;
}

message C2S_Login{

}

// 帧消息
message S2C_Frames{
    int32 frames = 1;
    int32 timePast = 2;
    repeated PlayerMove playerMove = 3;
    repeated PlayerJoin playerJoin = 4;
    repeated PlayerLeave playerLeave = 5;
}

message C2S_Frames{
    PlayerMove playerMove = 1;
}

//加入房间
message C2S_PlayerJoin {

}

//离开房间
message C2S_PlayerLeave {

}

// 心跳检测
message S2C_HeartBeat {
    int32 serverTime = 1;
}

message C2S_HeartBeat {
    int32 serverTime = 1;
}

// 以切片的方式同步房间历史帧
message S2C_SyncRoomStatus {
    required int32 isSyncFinish = 1;    //0未完成 1完成
    repeated S2C_Frames frames = 2;
}

message TowInt {
    required int32 v1 = 1;
    required int32 v2 = 2;
}

message PlayerMove {
    required int32 dt = 1;
    required string playerId = 2;
    int32 velocityX = 3;
    int32 velocityY = 4;
}

message PlayerJoin {
    required Player player = 1;
}

message PlayerLeave{
    required Player player = 1;
}

message Player{
    required string uuid = 1;
    required TowInt position =2;
    required TowInt velocity =3;
}

message CommonData {
    int32 protoId = 1;
    bytes body = 2;
}






